# ZoomMate

./: README.md  ZoomMate.au3  app.py  pyproject.toml  requirements.txt
.github/workflows/: compile-python.yml
Includes/: Config.au3  ElementActions.au3  GUI.au3  Globals.au3  KeyboardShortcuts.au3  MeetingAutomation.au3  Settings.au3  StateProfiler.au3  UIAutomation.au3  UserSettings.au3  Utils.au3  ZoomOperations.au3  ZoomPathEngine.au3  i18n.au3
automation/: __init__.py  meeting_automation.py  ui_backend.py
pyzoommate/: __init__.py  app.py  config.py  globals.py  user_settings.py
pyzoommate/automation/: __init__.py  element_actions.py  meeting_automation.py  ui_backend.py  zoom_operations.py
pyzoommate/diagnostics/: __init__.py  path_wizard.py  state_profiler.py
pyzoommate/gui/: __init__.py  settings_window.py  tray.py
pyzoommate/i18n/: __init__.py
scripts/: build_exe.ps1
tests/: test_config.py  test_i18n.py
